Fix bikes images height and overflow

--- a/source/sass/blocks/_bikes.scss
+++ b/source/sass/blocks/_bikes.scss
@@ -55,6 +55,7 @@
   left: 12px;
 
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
 
   width: 96.57%;
